[gd_scene load_steps=9 format=3 uid="uid://bm55n82sfyn37"]

[ext_resource type="Script" uid="uid://be75y6ijiw2wl" path="res://scenes/Collectible.gd" id="1_su7td"]
[ext_resource type="AudioStream" uid="uid://5eq4y1psdc7d" path="res://assets/sound/book1.mp3" id="2_auneg"]
[ext_resource type="Theme" uid="uid://dte5an7k6hog1" path="res://themes/base.tres" id="4_3nuli"]
[ext_resource type="Texture2D" uid="uid://b5656rpujvxxt" path="res://assets/collectibles/book.png" id="9_frf8e"]
[ext_resource type="Texture2D" uid="uid://cu7vs55b4bjil" path="res://assets/collectibles/book-open.png" id="9_jwhar"]
[ext_resource type="AudioStream" uid="uid://3u0hk83prun5" path="res://assets/sound/chill-bark.mp3" id="9_towvv"]

[sub_resource type="SpriteFrames" id="SpriteFrames_l0b0a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_frf8e")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_jwhar")
}],
"loop": true,
"name": &"opened",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ge1oa"]
size = Vector2(256.357, 278.789)

[node name="Collectible" type="Node2D"]
position = Vector2(329, 339)
script = ExtResource("1_su7td")
collectible_name = "star"
audio = ExtResource("2_auneg")

[node name="StaticBody2D2" type="Area2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="StaticBody2D2"]
position = Vector2(23.3135, -17.6904)
scale = Vector2(0.499487, 0.499487)
sprite_frames = SubResource("SpriteFrames_l0b0a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(22.623, -24.3093)
rotation = -0.267852
shape = SubResource("RectangleShape2D_ge1oa")

[node name="ChillBark" type="AudioStreamPlayer2D" parent="."]
position = Vector2(6792, -534)
stream = ExtResource("9_towvv")
volume_db = 4.657

[node name="Label" type="Label" parent="."]
offset_left = -93.0
offset_top = -348.0
offset_right = 85.0
offset_bottom = -223.0
theme = ExtResource("4_3nuli")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 150
text = "Label"

[connection signal="body_entered" from="StaticBody2D2" to="." method="_on_static_body_2d_2_body_entered"]
